--- a/currentCharacterSelected/currentCharacterSelected.component.html
+++ b/currentCharacterSelected/currentCharacterSelected.component.html
@@ -29,7 +29,7 @@ dfdfdf
 
 <div>Character 1:</div>
 <!-- {{$ctrl.currentCharacterList[0]}} -->
-<h2>character: {{$ctrl.text}} </h2>
+<h2> {{$ctrl.characterSelected}} </h2>
 
 
 <div>Character 2:</div>
@@ -39,7 +39,7 @@ dfdfdf
 
 <!-- {{$ctrl.currentCharacterService}} -->
 
-<h2>character: {{$ctrl.text}} </h2>
+<h2> {{$ctrl.characterSelectedVs}} </h2>
 
 <hr>
 <!-- <button ng-click="$ctrl.setCharacter( $ctrl.currentCharacterList )">Set character</button> -->
