--- a/currentCharacterSelected/currentCharacterSelected.component.html
+++ b/currentCharacterSelected/currentCharacterSelected.component.html
@@ -47,8 +47,17 @@ dfdfdf
 <button ng-click="$ctrl.createMatch( $ctrl.characterSelected , $ctrl.characterSelectedVs )">Set match</button>
 
 <h2> {{$ctrl.currentMatch}} </h2>
-
-
 <h2> {{$ctrl.characterSelected.characterSelected.id + "and " + $ctrl.characterSelectedVs.characterSelectedVs.id}} </h2>
+
+
+<!-- <div class="panel-body" ng-if="$ctrl.createdMatch"> -->
+{{$ctrl.createdMatch}}
+<!-- boner james -->
+</div>
+
+
+
+
+
 
 <!-- <button ng-click="$ctrl.setCharacter( $ctrl.currentCharacterList )">Set character</button> -->
