--- a/currentCharacterSelected/currentCharacterSelected.component.html
+++ b/currentCharacterSelected/currentCharacterSelected.component.html
@@ -42,9 +42,15 @@ dfdfdf
 <h2> {{$ctrl.characterSelectedVs}} </h2>
 
 
+{{$ctrl.loggedInUser}}
+
+{{$ctrl.loggedInUser.data}}
+
+<!-- $ctrl.loggedInUser.data.id -->
+{{$ctrl.loggedInUser.data.id}}
 
 <hr>
-<button ng-click="$ctrl.createMatch( $ctrl.characterSelected , $ctrl.characterSelectedVs )">Set match</button>
+<button ng-click="$ctrl.createMatch( $ctrl.characterSelected , $ctrl.characterSelectedVs, $ctrl.loggedInUser.data.id )">Set match</button>
 
 <h2> {{$ctrl.currentMatch}} </h2>
 <h2> {{$ctrl.characterSelected.characterSelected.id + "and " + $ctrl.characterSelectedVs.characterSelectedVs.id}} </h2>
