--- a/dashboard/dashboard.component.html
+++ b/dashboard/dashboard.component.html
@@ -1,6 +1,10 @@
-<current-character-selected>
-</current-character-selected>
 
 
-<character-list>
-</character-list>
+<!-- {{dc.loggedInUser }} -->
+
+  <current-character-selected >
+  </current-character-selected>
+
+
+  <character-list>
+  </character-list>
