--- a/login/login.component.html
+++ b/login/login.component.html
@@ -70,9 +70,15 @@ dfdsf -->
     Character Select-1000
     <br><br><br><br><br> -->
     <!-- <a href="#/login">login</a> -->
+    Success!
     {{ fc.loggedInUser.data.id}}
+    <!-- {{ }} -->
+    <!--  -->
 
-    <a href="#/dashboard">Continue to Dash</a>
+    <!-- <div ng-click='fc.goNext("/matchdisplay")'>next page</div> -->
+    <button ng-click="fc.welcomeLink()">Continue to Welcome</button>
+
+    <!-- <a href="#/dashboard">Continue to Dash</a> -->
 
 
 <!-- {{ fc.loggedInUser}} -->
