--- a/login/login.component.html
+++ b/login/login.component.html
@@ -76,7 +76,7 @@ dfdsf -->
     <!--  -->
 
     <!-- <div ng-click='fc.goNext("/matchdisplay")'>next page</div> -->
-    <button ng-click="fc.welcomeLink()">Continue to Welcome</button>
+    <button ng-click="fc.dashboardLink()">Continue to Welcome</button>
 
     <!-- <a href="#/dashboard">Continue to Dash</a> -->
 
