--- a/characterSelect/characterSelect.component.html
+++ b/characterSelect/characterSelect.component.html
@@ -1,7 +1,7 @@
 
 
 
-<img ng-src="https://placekitten.com/{{$ctrl.character.id * 100}}/100" class="" make-draggable></a>
+<!-- <img ng-src="https://placekitten.com/{{$ctrl.character.id * 100}}/100" class="" make-draggable></a> -->
 
 
 <div class='panel panel-default'>
