--- a/currentCharacterSelected/currentCharacterSelected.component.html
+++ b/currentCharacterSelected/currentCharacterSelected.component.html
@@ -30,10 +30,13 @@ dfdfdf
 <hr>
 <div>Playing As:</div>
 <div> {{$ctrl.characterSelected.characterSelected.name}} </div>
+<!-- <div> {{$ctrl.characterSelected}} </div> -->
+<div> {{$ctrl.characterSelected}} </div>
 
 
 <div>Playing Against:</div>
 <div> {{ $ctrl.characterSelectedVs.characterSelectedVs.name }} </div>
+<div> {{$ctrl.characterSelectedVs}} </div>
 
 
 
